# rust-learning

./: Cargo.toml  init.sh
src/: main.rs  person.rs
src/customer/: customer.rs  mod.rs  parser.rs  uuid_parser.rs
src/database/: generic.rs  mod.rs  mongobase.rs
tests/: customer_integration_test.rs
