[package]
name = "tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.3.1"
tokio = { version = "1", features = ["full"] }
mongodb = "2.4.0"
futures = "0.3.28"
serde = "1.0.160"
rocket = "=0.5.0-rc.3"

[dependencies.uuid]
version = "1.3.0"
features = [
    "serde", # Enable serde support
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]